Closed
Bug 20205
Opened 25 years ago
Closed 25 years ago
[dogfood] rearangement of characters during typing
Categories
(Core :: DOM: Editor, defect, P3)
Core
DOM: Editor
Tracking
()
VERIFIED
FIXED
M12
People
(Reporter: jar, Assigned: mozeditor)
References
Details
(Whiteboard: [PDT+] will verify in 12/1 build)
Enter a word such as:
abcdefg
Using the mouse, select focus between the c and the d, and then type a space
followed by 12345
You will see:
abc 23451defg
As soon as you type the space, and then the 1, the cursor does an effective
backspace, and then the rest of charachters are entered. To watch it like a
movie, you would see:
abcdefg
abc defg
abc 1defg
abc 21defg
abc 231defg
abc 2341defg
This bug makes in nearly impossible to position the cursor with a mouse, and
just start typing.
Updated•25 years ago
|
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → WORKSFORME
Comment 3•25 years ago
|
||
tried this on win32 and on mac, tried it in the location field, in composer and
in mail. We can't reproduce this, marking as worksforme. Brade used current mac
build, I used current windows build.
Linux Redhat 5.0 (1999-11-29-08 M12)
Mac (1999-11-29-08 M12)
Win_nt 4.0 (1999-11-29-09 M12)
Using today's builds on all 3 platforms and
I try in HTML compose and plain text compose windows, I cannot re-produce the
problem either.
fenella - for win32, try this on a reply message where the text that you type is
within the quoted text. See what happens. Thanks.
Reporter | ||
Updated•25 years ago
|
Status: RESOLVED → REOPENED
Reporter | ||
Comment 6•25 years ago
|
||
Try this in your email: Type the following line:
shoot him
Next, locate the cursor just after the t, and try to type the word " at":
shoot at him
is what you expected... but what you will see is:
shoot ta him
I'm sorry that I oversimplified the example originally. You must have a space
between the words that you are adding. You must place the cursor (using the
mouse) before the space, and after the last character in the word.
This is a very common action when editing email.
Reporter | ||
Comment 7•25 years ago
|
||
Just to be more specific... This bug can be seen on NT 4.0 with SP 5. I haven't
tried it on Linux etc. yet.
Updated•25 years ago
|
Component: Composition → Editor
OS: Windows NT → All
Product: MailNews → Browser
Hardware: PC → All
Resolution: WORKSFORME → ---
Comment 8•25 years ago
|
||
I see this now with jar's most recent example. It can be reproduced in Composer
as well as mail compose (but not in the location bar) on Macintosh.
Assignee | ||
Updated•25 years ago
|
Assignee: beppe → jfrancis
Status: REOPENED → NEW
Assignee | ||
Comment 9•25 years ago
|
||
reassigning to me
Assignee | ||
Updated•25 years ago
|
Severity: normal → critical
Status: NEW → ASSIGNED
Target Milestone: M12
Assignee | ||
Comment 10•25 years ago
|
||
accepting bug / m12
Assignee | ||
Comment 11•25 years ago
|
||
this is a bug caused by my recent whitespace conversion code in html compose.
This code is not needed in plaintext, which is why you won't see this bug in url
bars, text fields/areas, or plaintext mail. I can fix it today (modulo build and
tree closure issues).
Assignee | ||
Comment 12•25 years ago
|
||
i have the fix for this - will go in when tree opens.
Comment 13•25 years ago
|
||
qa contact to sujay since it's reproducible in the composer.
Updated•25 years ago
|
Whiteboard: [PDT+] → [PDT+] [by 12/3]
Assignee | ||
Updated•25 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 25 years ago → 25 years ago
Resolution: --- → FIXED
Assignee | ||
Comment 14•25 years ago
|
||
fixed
Comment 15•25 years ago
|
||
will verify in 12/1 build.
Comment 16•25 years ago
|
||
linking to 12658, composer pdt+ bug tracking
Comment 17•25 years ago
|
||
verified in 12/1 build.
You need to log in
before you can comment on or make changes to this bug.
Description
•