fix for bug 20205: selection was getting jerked around by whitespace conversion code.